# balkon_audio_monitor

./: .gitignore  .rgignore  AGENTS.md  DEVELOPMENT.md  Makefile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  audio_devices.py  config.py  logging_setup.py  main.py  models.py  pipeline.py  service.py
app/aggregate/: __init__.py  event_aggregator.py  noise_intervals.py
app/capture/: __init__.py  base.py  live.py  wav.py
app/classify/: __init__.py  heuristics.py  service.py
app/detect/: __init__.py  detector.py
app/features/: __init__.py  extractor.py
app/storage/: clips.py  database.py  retention.py  spectrogram.py
app/web/: __init__.py  app.py
app/web/static/: style.css
app/web/templates/: _chart_macros.html  _range_controls.html  base.html  (+6 more)
configs/: asound.conf.example  config.yaml  config.yaml.example  deploy.env.example  yamnet_class_map_pl.csv
docs/: FIRST_RUN_CHECKLIST.md  RASPBERRY_PI_SETUP.md
sample_audio/: README.md  generate_samples.py
scripts/: bootstrap_remote.sh  configure_birdnet_url.py  deploy.sh  disable_birdnet.sh  install_birdnet_server.sh  install_python_deps.sh  install_system_deps.sh  logs.sh  record_sample.sh  restart_service.sh  setup_venv.sh  smoke_test.sh  test.sh  test_and_deploy.sh
systemd/: audio-monitor.service  birdnet-server.service
tests/integration/: test_offline_pipeline.py
tests/unit/: test_aggregator.py  test_audio_devices.py  test_clip_retention.py  test_dashboard_buckets.py  test_detector.py  test_main.py  test_web_routes.py  test_web_time_format.py  test_yamnet_classifier.py
