[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "balkon-audio-monitor"
version = "0.1.0"
description = "Balkon Audio Monitor (BAM) for Raspberry Pi 3 B+"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Flask>=3.0,<4.0",
  "numpy>=1.26,<3.0",
  "Pillow>=10.0,<12.0",
  "PyYAML>=6.0,<7.0",
  "waitress>=3.0,<4.0",
  "ai-edge-litert>=2.1,<3.0; platform_system == 'Linux' and python_version < '3.14'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
